# merlin

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .merlin  .ocamlformat  .ocamlformat-enable  .ocamlformat-ignore  .travis-ci.sh  .travis-install.sh  .travis.yml  404.html  CHANGELOG  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOP.md  Gemfile  LICENSE  Makefile  Makefile.ocamlmakefile  Makefile.preprocess  Makefile.wine  OCamlMakefile  PROTOCOL.md  README  README.md  RELEASE.md  TODO  TODO.md  _config.yml  _tags  _tags.in  appveyor.cmd  appveyor.sh  appveyor.yml  bench.Dockerfile  bench.Dockerfile.disabled  browse.ml  (+85 more)
emacs/: check.sh  dune  jbuild  merlin-ac.el  merlin-cap.el  merlin-company.el  merlin-compat.el  merlin-counsel.el  merlin-iedit.el  merlin-imenu.el  merlin-xref.el  merlin.el
emacs/tests/: merlin-cap-test.el
src/analysis/: ast_iterators.ml  browse.ml  browse.mli  browseT.ml  browseT.mli  browse_misc.ml  browse_tree.ml  browse_tree.mli  complete_data.ml  completion.ml  completion.mli  construct.ml  construct.mli  context.ml  context.mli  destruct.ml  destruct.ml.new  destruct.ml.old  destruct.mli  destruct.new.ml  destruct.old.ml  dune  env_lookup.ml  env_lookup.mli  expansion.ml  expansion.mli  expr_search.ml  expr_search.mli  highlighting.ml  highlighting.mli  index_format.ml  index_occurrences.ml  inlay_hints.ml  inlay_hints.mli  jbuild  jump.ml  jump.mli  locate.ml  locate.mli  locate_type_multi.ml  (+56 more)
src/commands/: dune  new_commands.ml  new_commands.mli  query_json.ml
src/frontend/: IO.ml  IO.mli  IO_json.ml  IO_json.mli  IO_sexp.ml  command.ml  command.mli  daemon_merlin.ml  dune  gen_ccflags.ml  jbuild  main_args.ml  main_args.mli  ocamlmerlin.c  ocamlmerlin.ml  ocamlmerlin_client.c  ocamlmerlin_server.ml  protocol.ml  protocol.mli  query_commands.ml  query_commands.mli  query_json.ml  query_protocol.ml  top_options.ml
src/frontend/kernel/: completion_kind.ml  completion_kind.mli  dune  locate_types_result.ml  locate_types_result.mli  outline_kind.ml  outline_kind.mli  query_protocol_kernel.ml
src/frontend/lsp/: document.ml  document.mli  document_store.ml  document_store.mli  dune  ocamlmerlin_lsp.ml
src/frontend/new/: new_commands.ml  new_commands.mli  new_merlin.ml
src/frontend/ocamlmerlin/: dune  gen_ccflags.ml  log_info.ml  log_info.mli  ocamlmerlin.c  ocamlmerlin_server.ml  query_json.ml
src/frontend/old/: IO.ml  IO.mli  IO_sexp.ml  command.ml  command.mli  ocamlmerlin.ml  old_IO.ml  old_IO.mli  old_command.ml  old_command.mli  old_merlin.ml  old_merlin.mli  old_protocol.ml  protocol.ml
src/frontend/randomized-testing/: dune  ocamlmerlin_tester.ml
src/frontend/reference/: reference.ml  rqueries.ml  rqueries.mli
src/kernel/: browse.ml  browse.mli  chunk.ml  chunk_parser_utils.ml  chunk_parser_utils.mli  domain_msg.ml  dot_merlin.ml  dot_merlin.mli  dune  error_classifier.ml  extension.ml  extension.mli  extensions.ml  extensions.mli  extensions_utils.ml  fake.ml  fake.mli  global_state.ml  global_state.mli  history.ml  jbuild  lexer_ident.ml  lexer_raw.ml  lexer_raw.mli  mbrowse.ml  mbrowse.mli  mbrowse_p.ml  mbrowse_p.mli  mconfig.ml  mconfig.mli  mconfig_dot.ml  mconfig_dot.mli  merlinLib.ml  merlinLib.mli  merlin_browse.ml  merlin_browse.mli  merlin_buffer.ml  merlin_buffer.mli  merlin_explain.ml  merlin_lexer.ml  (+54 more)
src/merlin/frontend/: dune
src/project/: dune  dune_workspace.ml  dune_workspace.mli  paths.ml  paths.mli  scan.ml  scan.mli
src/utils/: .ocamlformat-ignore  bitfield.ml  bitfield.mli  build_path_prefix_map.ml  ccomp.ml  clflags.ml  clflags.mli  dune  file_cache.ml  file_cache.mli  file_id.ml  file_id.mli  findlib_stub.ml.dummy  findlib_stub.ml.ok  format_doc.ml  history.ml  history.mli  identifiable.ml  inuit_stub.ml  inuit_stub.mli  jbuild  lib_config.ml  lib_config.mli  local_store.ml  local_store.mli  logger.ml  logger.mli  marg.ml  marg.mli  menhirLib.ml  menhirLib.mli  menhirUtils.ml  menhirUtils.mli  misc.ml  misc.mli  mymap.ml  mymap.mli  ppxsetup.ml  ppxsetup.mli  sexp.ml  (+12 more)
tests/: 01.in  01.out  02.out  03.in  03.out  Makefile  Makefile.cram  bench.sh  bin_prot_01.in  bin_prot_01.out  bin_prot_02.in  bin_prot_02.out  bin_prot_03.in  bin_prot_03.out  bin_prot_04.in  bin_prot_04.out  binable_01.in  binable_01.out  binable_02.in  binable_02.out  binable_03.in  binable_03.out  binable_sig_01.in  binable_sig_01.out  binable_sig_02.in  binable_sig_02.out  binable_sig_03.in  binable_sig_03.out  completion_01.in  completion_01.out  completion_02.in  completion_02.out  dune  dune.inc  end_of_definition_01.in  end_of_definition_01.out  fieldslib_01.in  fieldslib_01.out  functions.sh  gen_tests.ml  (+55 more)
tests/completion/: dune  expansion.t  expansion2.ml  jbuild  parenthesize.ml
tests/config/: dune  jbuild  path-expansion.t
tests/destruct/: basic.t  dune  jbuild
tests/errors/: consistent_env.t  dune  test.ml
tests/file-cache/: dep.ml  dune  test.t  test_old.t
tests/fuzzy-testing/: build-test-code-base  dune  logs.t  merl-an-metadata.t
tests/misc/: dune  external-arity.t  load_path_post_407.t
tests/motion/: dune  jbuild  jump.t
tests/no-escape/: dune  jbuild
tests/occurrences/: basic.t  dune  issue827.t
tests/polarity-search/: dune  older.t  recent.t
tests/pp/: dune  simple-pp.sh  simple-pp.t
tests/recovery/: dune  jbuild  test.t
tests/short-paths/: dune  test.ml  test.t
tests/test-dirs/: dune  enclosing.t  function-recovery.t  inconsistent-assumptions.t  issue1214.t  issue1506.t  issue1518.t  issue1558.t  issue1683-ill-formed-letop.t  issue1763.t  issue1867.t  issue1980.t  issue1987.t  issue2000.t  issue2033.t  jump-issue1862.t  locate-type-multi.t  locate-types.t  lsp-issue1489.t  outline-recovery.t  polarity-search.t  punning.t  random-doc-issue.t  recovery.t  saved-parts.t  search-by-type-comparison-to-polarity-search.t  signature-help.t  sp-normalization.t  string-loc.t  typing-recovery.t  with-cmi.t
tests/type-enclosing/: dune  letop.t
tests/type-expr/: dune  jbuild  test.t
tests/warnings/: backtrack.t  dune  jbuild
vim/merlin/: dune  jbuild
(+3680 files in other folders)
