opam-version: "2.0"
maintainer:   "defree@gmail.com"
authors:      "The Merlin team"
synopsis:     "Reads config files for merlin"
homepage:     "https://github.com/ocaml/merlin"
bug-reports:  "https://github.com/ocaml/merlin/issues"
dev-repo:     "git+https://github.com/ocaml/merlin.git"
license:      "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06.1" }
  "dune" {>= "2.7.0"}
  "yojson" {>= "1.6.0"}
  "ocamlfind" {>= "1.6.0"}
  "csexp" {>= "1.2.3"}
]
description:
  "Helper process: reads .merlin files and gives the normalized content to merlin"
