opam-version: "2.0"
maintainer:   "defree@gmail.com"
authors:      "The Merlin team"
homepage:     "https://github.com/ocaml/merlin"
bug-reports:  "https://github.com/ocaml/merlin/issues"
dev-repo:     "git+https://github.com/ocaml/merlin.git"
license:      "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.0" & < "5.1"}
  "dune" {>= "2.9.0"}
  "csexp" {>= "1.5.1"}
  "menhir"    {dev & >= "20201216"}
  "menhirLib" {dev & >= "20201216"}
  "menhirSdk" {dev & >= "20201216"}
]
synopsis:
  "Merlin's libraries"
description:
  "These libraries provides access to low-level compiler interfaces and the
  standard higher-level merlin protocol. The library is provided as-is, is not
  thoroughly documented, and its public API might break with any new release."
