opam-version: "1.2"
name:         "merlin-lsp"
version:      "3.1.0"
maintainer:   "defree@gmail.com"
authors:      "The Merlin team"
homepage:     "https://github.com/ocaml/merlin"
bug-reports:  "https://github.com/ocaml/merlin/issues"
dev-repo:     "https://github.com/ocaml/merlin.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "dune"  {build & >= "1.8.0"}
  "ocamlfind" {>= "1.5.2"}
  "yojson"
  "ppx_protocol_conv_json" {>= "5.0.0"}
  "mdx" {test & >= "1.3.0"}
]

available: [ ocaml-version >= "4.04.0" & ocaml-version < "4.08" ]
