opam-version: "2.0"
name:         "merlin-lsp"
version:      "3.1.0"
maintainer:   "defree@gmail.com"
authors:      "The Merlin team"
homepage:     "https://github.com/ocaml/merlin"
bug-reports:  "https://github.com/ocaml/merlin/issues"
dev-repo: "git+https://github.com/ocaml/merlin.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.04.0" & < "4.08"}
  "dune" {build & >= "1.8.0"}
  "ocamlfind" {>= "1.5.2"}
  "yojson"
  "ppx_deriving_yojson"
  "mdx" {with-test & >= "1.3.0"}
]
synopsis:
  "LSP frontend for Merlin"
