opam-version: "2.0"
maintainer:   "defree@gmail.com"
authors:      "The Merlin team"
homepage:     "https://github.com/ocaml/merlin"
bug-reports:  "https://github.com/ocaml/merlin/issues"
dev-repo:     "git+https://github.com/ocaml/merlin.git"
license:      "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {>= "3.0.0"}
  "merlin-lib" {= version}
  "dot-merlin-reader" {= version}
  "ocaml-index" {= version & post}
  "yojson" {>= "2.0.0"}
  "conf-jq" {with-test}
  "ppxlib" {with-test}
  "ppx_string" {with-test}
  "reason" {with-test}
]
conflicts: [
  "seq" {!= "base"}
]
synopsis:
  "Editor service that provides advanced IDE features for OCaml"
description:
  "Merlin is an assistant for editing OCaml code. It aims to provide the features available in modern IDEs: error reporting, auto completion, source browsing and much more."
