(library
 (name merlin_analysis)
 (flags
  :standard
  -open Ocaml_utils
  -open Ocaml_parsing
  -open Ocaml_typing
  -open Merlin_utils)
 (libraries
  config
  merlin_specific
  merlin_extend
  merlin_kernel
  merlin_utils
  ocaml_parsing
  preprocess
  query_protocol
  ocaml_typing
  ocaml_utils))
