(library
  (name merlin_commands)
  (public_name merlin-lib.commands)
  (flags
    :standard
    -open Ocaml_parsing
    -open Merlin_utils
    -open Merlin_kernel)
  (libraries
    merlin-lib.ocaml_parsing
    merlin-lib.utils
    merlin-lib.kernel
    merlin-lib.query_protocol
    merlin-lib.query_protocol_kernel
    merlin-lib.query_commands
    yojson)
  (preprocess (pps ppx_yojson_conv)))
