(library
 (name      query_protocol)
 (modules   query_protocol)
 (flags -open Merlin_utils -open Merlin_kernel -open Ocaml_parsing -open Merlin_kernel)
 (libraries merlin_kernel merlin_utils ocaml_parsing))

(library
 (name      query_commands)
 (modules   query_commands)
 (flags
  -open Ocaml_utils
  -open Ocaml_parsing
  -open Ocaml_typing
  -open Merlin_utils
  -open Merlin_analysis
  -open Merlin_kernel)
 (libraries
  merlin_utils
  merlin_kernel
  ocaml_utils
  ocaml_parsing
  ocaml_typing
  merlin_specific
  config
  merlin_analysis
  query_protocol))
