(library
 (name        query_protocol)
 (public_name merlin-lib.query_protocol)
 (modules     query_protocol)
 (flags :standard -open Merlin_utils -open Merlin_kernel -open Ocaml_parsing -open Merlin_kernel)
 (libraries merlin_kernel merlin_utils ocaml_parsing))

(library
 (name        query_commands)
 (public_name merlin-lib.query_commands)
 (modules     query_commands)
 (flags
  :standard
  -open Ocaml_utils
  -open Ocaml_parsing
  -open Ocaml_typing
  -open Merlin_kernel
  -open Merlin_specific
  -open Merlin_utils
  -open Merlin_specific
  -open Merlin_analysis
  -open Merlin_kernel)
 (libraries
  merlin_utils
  merlin_kernel
  ocaml_utils
  ocaml_parsing
  ocaml_typing
  merlin_specific
  merlin_config
  merlin_analysis
  merlin_sherlodoc
  query_protocol
  str))
