(rule (copy# ../ocaml/driver/pparse.ml  pparse.ml ))
(rule (copy# ../ocaml/driver/pparse.mli pparse.mli))

(library
 (name merlin_kernel)
 (wrapped false)
 (flags :standard -open Merlin_utils)
 (libraries config os_ipc parsing preprocess typing utils lrgrep.runtime
            merlin_extend merlin_specific merlin_utils merlin_dot_protocol))

(rule
  (targets standard_library.ml)
  (action
    (write-file %{targets} "let path = {|%{ocaml-config:standard_library}|}")))
