(rule (copy# ../ocaml/driver/pparse.ml  pparse.ml ))
(rule (copy# ../ocaml/driver/pparse.mli pparse.mli))

(library
 (name merlin_kernel)
 (wrapped false)
 (flags
  :standard
  -open Ocaml_utils
  -open Merlin_utils
  -open Ocaml_parsing
  -open Ocaml_typing)
 (libraries config os_ipc ocaml_parsing preprocess ocaml_typing ocaml_utils
            merlin_extend merlin_specific merlin_utils merlin_dot_protocol))

(rule
  (targets standard_library.ml)
  (action
    (write-file %{targets} "let path = {|%{ocaml-config:standard_library}|}")))
