(rule (copy# ../ocaml/driver/pparse.ml  pparse.ml ))
(rule (copy# ../ocaml/driver/pparse.mli pparse.mli))

(library
 (name merlin_kernel)
 (public_name merlin-lib.kernel)
 (flags
  :standard
  -open Ocaml_utils
  -open Merlin_utils
  -open Ocaml_parsing
  -open Ocaml_preprocess
  -open Ocaml_typing
  -open Merlin_specific
  -open Merlin_extend)
 (libraries merlin_config os_ipc ocaml_parsing ocaml_preprocess ocaml_typing
            ocaml_utils merlin_extend merlin_specific merlin_utils
            merlin_dot_protocol merlin_index_format unix str))

(rule
  (targets standard_library.ml)
  (action
    (write-file %{targets} "let path = {|%{ocaml-config:standard_library}|}")))
