(rule (copy# ../platform/platform_misc.c platform_misc.c))

(rule
 (targets menhirLib.ml menhirLib.mli)
 (mode promote)
 (action
  (progn
   (copy %{lib:menhirLib:menhirLib.ml}  menhirLib.ml)
   (copy %{lib:menhirLib:menhirLib.mli} menhirLib.mli))))


(library
 (name merlin_utils)
 (wrapped false)
 (libraries str yojson unix)
 (c_names platform_misc))
