(rule (copy# ../platform/platform_misc.c platform_misc.c))

(library
 (name merlin_utils)
 (libraries str yojson unix result)
 (foreign_stubs (language c) (names platform_misc)))

; [Printf.ifprintf] doesn't have the right type before ocaml/ocaml#201, and
; [make_iprintf] doesn't exist before ocaml/ocaml#267

(rule
 (targets logger_helper.ml)
 (enabled_if (>= %{ocaml_version} 4.03.0))
 (action (with-stdout-to %{targets}
          (echo "let ifprintf oc fmt = Printf.ifprintf oc fmt"))))

(rule
 (targets logger_helper.ml)
 (enabled_if (< %{ocaml_version} 4.03.0))
 (action
  (with-stdout-to %{targets}
   (echo "let ifprintf oc (CamlinternalFormatBasics.Format (fmt, _)) =\n\
            CamlinternalFormat.make_printf (fun _ _ -> ()) oc End_of_acc fmt"))))

