(alias
 (name runtest)
 (deps external-arity.t)
 (action
   (progn
     (setenv MERLIN %{dep:../merlin-wrapper}
       (run %{bin:mdx} test --syntax=cram %{deps}))
     (diff? %{deps} %{deps}.corrected))))

(alias
 (name runtest)
 (deps load_path.t)
 (enabled_if (< %{ocaml_version} 4.08.0))
 (action
   (progn
     (setenv OCAMLC %{ocamlc}
     (setenv MERLIN %{dep:../merlin-wrapper}
       (run %{bin:mdx} test --syntax=cram %{deps})))
     (diff? %{deps} %{deps}.corrected))))

(alias
 (name runtest)
 (deps load_path_post_407.t)
 (enabled_if (>= %{ocaml_version} 4.08.0))
 (action
   (progn
     (setenv OCAMLC %{ocamlc}
     (setenv MERLIN %{dep:../merlin-wrapper}
       (run %{bin:mdx} test --syntax=cram %{deps})))
     (diff? %{deps} %{deps}.corrected))))
