(alias
 (name runtest)
 (deps jump.t)
 (action
   (progn
     (setenv MERLIN %{exe:../merlin-wrapper}
       (run %{bin:mdx} test %{deps}))
     (diff? %{deps} %{deps}.corrected))))

(alias
 (name runtest)
 (deps phrase.t)
 (action
   (progn
     (setenv MERLIN %{exe:../merlin-wrapper}
       (run %{bin:mdx} test %{deps}))
     (diff? %{deps} %{deps}.corrected))))
