(alias
 (name runtest)
 (deps jump.t)
 (action
   (progn
     (setenv MERLIN %{exe:../merlin-wrapper}
       (run %{bin:mdx} test --syntax=cram %{deps}))
     (diff? %{deps} %{deps}.corrected))))

(alias
 (name runtest)
 (deps phrase.t)
 (action
   (progn
     (setenv MERLIN %{exe:../merlin-wrapper}
       (run %{bin:mdx} test --syntax=cram %{deps}))
     (diff? %{deps} %{deps}.corrected))))
