(alias
 (name runtest)
 (deps (:t basic.t) basic.ml)
 (action
   (progn
     (setenv MERLIN %{exe:../merlin-wrapper}
       (run %{bin:mdx} test --syntax=cram %{t}))
     (diff? %{t} %{t}.corrected))))

(alias
 (name runtest)
 (deps (:t issue827.t) issue827.ml)
 (action
   (progn
     (setenv MERLIN %{exe:../merlin-wrapper}
       (run %{bin:mdx} test --syntax=cram %{t}))
     (diff? %{t} %{t}.corrected))))
