(alias
 (name runtest)
 (enabled_if (>= %{ocaml_version} 4.07.0))
 (deps (:t recent.t))
 (action
   (progn
     (setenv MERLIN %{exe:../merlin-wrapper}
       (run %{bin:mdx} test --syntax=cram %{t}))
     (diff? %{t} %{t}.corrected))))

(alias
 (name runtest)
 (enabled_if (< %{ocaml_version} 4.07.0))
 (deps (:t older.t))
 (action
   (progn
     (setenv MERLIN %{exe:../merlin-wrapper}
       (run %{bin:mdx} test --syntax=cram %{t}))
     (diff? %{t} %{t}.corrected))))
