(cram
 (applies_to no-escape type-expr environment_on_open locate-type
   polarity-search)
 (enabled_if
  (<> %{os_type} Win32)))

(cram
 (applies_to typing-recovery)
 (enabled_if
  (and
   (<> %{ocaml_version} 4.12.0+multicore)
   (<> %{ocaml_version} 4.12.0+domains))))

; FIXME: re-enable once ppxlib for 5.1 is released
(cram
 (applies_to with-ppx)
 (enabled_if false))
