(install
 (package merlin)
 (section share)
 (files (autoload/ctrlp/locate.vim as vim/autoload/ctrlp/locate.vim)
        (autoload/ctrlp/outline.vim as vim/autoload/ctrlp/outline.vim)
        (autoload/neomake/makers/ft/ocaml.vim as vim/autoload/neomake/makers/ft/ocaml.vim)
        (autoload/merlin_find.vim as vim/autoload/merlin_find.vim)
        (autoload/merlin.py as vim/autoload/merlin.py)
        (autoload/merlin_type.vim as vim/autoload/merlin_type.vim)
        (autoload/merlin.vim as vim/autoload/merlin.vim)
        (autoload/merlin_visual.vim as vim/autoload/merlin_visual.vim)
        (doc/merlin.txt as vim/doc/merlin.txt)
        (ftdetect/merlin.vim as vim/ftdetect/merlin.vim)
        (ftplugin/merlin.vim as vim/ftplugin/merlin.vim)
        (ftplugin/ocaml.vim as vim/ftplugin/ocaml.vim)
        (ftplugin/omlet.vim as vim/ftplugin/omlet.vim)
        (ftplugin/reason.vim as vim/ftplugin/reason.vim)
        (plugin/merlin.vim as vim/plugin/merlin.vim)
        (syntax_checkers/ocaml/merlin.vim as vim/syntax_checkers/ocaml/merlin.vim)
        (syntax_checkers/omlet/merlin.vim as vim/syntax_checkers/omlet/merlin.vim)
        (syntax/merlin.vim as vim/syntax/merlin.vim)))
