(rule
 (targets merlin-wrapper)
 (deps    merlin-wrapper-template)
 (action
   (progn
     (with-stdout-to %{targets}
       (run sed -e "s#%%OCAMLMERLIN_PATH%%#%{bin:ocamlmerlin}#"
                -e "s#%%DOT_MERLIN_READER%%#%{bin:dot-merlin-reader}#"
            merlin-wrapper-template))
     (bash "chmod +x %{targets}"))))

(alias
  (name runtest)
  (deps merlin-wrapper))

(include dune.inc)

(rule
 (targets dune.inc.gen)
 (deps    (source_tree .))
 (action  (with-stdout-to %{targets} (run ./gen/gen_tests.exe))))

(alias
 (package merlin)
 (name   runtest)
 (action (diff dune.inc dune.inc.gen)))
