(* -*- tuareg -*- *)

module J = Jbuild_plugin.V1
;;

let ver =
  Scanf.sscanf J.ocaml_version "%s@.%s@." (fun maj min -> maj ^ min)
;;

Printf.ksprintf J.send {|
(copy_files# %s/*.ml{,i})

(library
  (name merlin_specific)
  (public_name merlin.specific)
  (wrapped false)
  (libraries merlin_utils parsing preprocess typing utils))
|} ver
