(* -*- tuareg -*- *)

module J = Jbuild_plugin.V1
;;

let ver =
  Scanf.sscanf J.ocaml_version "%s@.%s@." (fun maj min -> maj ^ min)
;;

Printf.ksprintf J.send {|
(copy_files# %s/*.ml{,i})

(rule (copy# ../../extend/extend_helper.ml  extend_helper.ml ))
(rule (copy# ../../extend/extend_helper.mli extend_helper.mli))

(library
  (name parsing)
  (public_name merlin.parsing)
  (wrapped false)
  (flags (:standard -w -9))
  (modules_without_implementation asttypes parsetree)
  (libraries merlin_utils utils))
|} ver
