(rule (copy# ../../extend/extend_helper.ml  extend_helper.ml ))
(rule (copy# ../../extend/extend_helper.mli extend_helper.mli))

(library
  (name ocaml_parsing)
  (public_name merlin-lib.ocaml_parsing)
  (flags -open Ocaml_utils -open Merlin_utils (:standard -w -9))
  (modules_without_implementation asttypes parsetree)
  (libraries merlin_utils ocaml_utils))
