(ocamllex lexer_ident lexer_raw)

(library
  (name preprocess)
  (wrapped false)
  (flags :standard -open Merlin_utils)
  (libraries parsing utils merlin_utils lrgrep.runtime))

(menhir
 (modules parser_raw)
 (enabled_if (<> %{profile} "release"))
 (mode    promote)
 (flags :standard --inspection --table --cmly))

(rule
  (targets parser_recover.ml)
  (enabled_if (<> %{profile} "release"))
  (deps    parser_raw.cmly)
  (mode    promote)
  (action
    (with-stdout-to %{targets}
       (run %{exe:./recover/gen_recover.exe} %{deps}))))

(rule
  (targets parser_explain.ml)
  (enabled_if (<> %{profile} "release"))
  (deps    parser_raw.cmly)
  (mode    promote)
  (action
    (with-stdout-to %{targets}
       (run %{exe:./explain/gen_explain.exe} %{deps}))))

(rule
  (targets parser_printer.ml)
  (enabled_if (<> %{profile} "release"))
  (deps    parser_raw.cmly)
  (mode    promote)
  (action
    (with-stdout-to %{targets}
       (run %{exe:./printer/gen_printer.exe} %{deps}))))

(rule
 (targets menhirLib.ml menhirLib.mli)
 (mode promote)
 (action
  (progn
   (copy %{lib:menhirLib:menhirLib.ml}  menhirLib.ml)
   (copy %{lib:menhirLib:menhirLib.mli} menhirLib.mli))))

(rule
  (targets parse_errors.ml)
  (deps    parser_raw.cmly parse_errors.mlyl)
  (action
    (with-stdout-to %{targets}
       (run %{exe:../../../vendor/lrgrep/src/main.exe} parse_errors.mlyl -g parser_raw.cmly
            -o parse_errors.ml))))
