(* -*- tuareg -*- *)

module J = Jbuild_plugin.V1
;;

let ver =
  try
    match List.assoc "cmi_magic_number" J.ocamlc_config with
    | "Caml1999I023" -> "407_0"
    | _ -> raise Not_found
  with Not_found ->
    Scanf.sscanf J.ocaml_version "%s@.%s@." (fun maj min -> maj ^ min)
;;

Printf.ksprintf J.send {|
(copy_files# %s/*.ml{,i})

(library
  (name typing)
  (public_name merlin.typing)
  (wrapped false)
  (flags (:standard -w -9))
  (modules_without_implementation annot outcometree)
  (libraries merlin_utils parsing utils))
|} ver
